--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pika = "^1.3.2"
 PyYAML = "^6.0.1"
 python-dotenv= "^1.0.0"
 python-consul = "^1.1.0"
+boto3 = "^1.34.84"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
