--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,14 @@ ipykernel = "^6.29.4"
 nvidia-cublas-cu12 = {url = "https://download.pytorch.org/whl/cu121/nvidia_cublas_cu12-12.1.3.1-py3-none-manylinux1_x86_64.whl#sha256=ee53ccca76a6fc08fb9701aa95b6ceb242cdaab118c3bb152af4e579af792728"}
 nvidia-cusparse-cu12 = {url = "https://download.pytorch.org/whl/nightly/cu121/nvidia_cusparse_cu12-12.1.0.106-py3-none-manylinux1_x86_64.whl"}
 torch = "^2.2.2"
+torchvision = "^0.17.2"
 
 pika = "^1.3.2"
 PyYAML = "^6.0.1"
 python-dotenv= "^1.0.0"
 python-consul = "^1.1.0"
 boto3 = "^1.34.84"
+sqlalchemy = "^2.0.29"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
