--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ python-dotenv= "^1.0.0"
 python-consul = "^1.1.0"
 boto3 = "^1.34.84"
 sqlalchemy = "^2.0.29"
+pgvector = "^0.2.5"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
