--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ scikit-learn = "^1.4.2"
 tqdm = "^4.66.2"
 matplotlib = "^3.8.4"
 seaborn = "^0.13.2"
+xgboost = "^2.0.1"
 
 pika = "^1.3.2"
 PyYAML = "^6.0.1"
